--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "next build",
   "devCommand": "next dev",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "ignoreCommand": "npx --yes next-ignore-typescript-error || true"
+  "framework": "nextjs"
 } 
