--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.24.7",
     "bootstrap": "^5.3.5",
     "next": "15.2.4",
     "react": "^19.0.0",
